# rpod

./: .gitignore  LICENSE  README.md  USER_AND_AGENT_GUIDE.md  pyproject.toml
src/rpod/: ISSUES.md  README.md  SETUP_GUIDE.md  __init__.py  __main__.py  api.py  cli.py  config.py  logging.py  project_config.py  registry.py  ssh.py
src/rpod/commands/: __init__.py  api.py  clean.py  download.py  env.py  exec.py  lifecycle.py  monitor.py  pods.py  setup.py  sync.py
tests/: conftest.py  test_rpod.py
