[project]
name = "rpod"
version = "0.2.2"
description = "RunPod CLI for managing GPU pods"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "beartype",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpod"]

[project.scripts]
rpod = "rpod.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
